--- a/1.css
+++ b/1.css
@@ -2,8 +2,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    background-image: linear-gradient(to right, #2b3236 , #03181b);
+    font-family: "poppins", sans-serif;
+    background-color: #000000;
 }
 
 .navbar {
@@ -11,9 +11,9 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    /* background-color: #FFDC00; */
-    background-image: linear-gradient(to right, #1295dc , #4fd6e8);
-    color: #fff;
+    background-color: goldenrod;
+    /* background-image: linear-gradient(to right, #1295dc , #4fd6e8); */
+    color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,7 +43,7 @@ body {
 }
 
 .navbar-menu a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-size: 16px;
     text-transform: uppercase;
@@ -86,7 +86,7 @@ section p {
 
 #about {
     background-color: #ffffff;
-    height: 100vh;
+    margin-top: 350px;
 }
 
 #projects {
@@ -225,17 +225,16 @@ a{
 
 
 #home {
-    background-color: rgb(255, 255, 255);
-    height: 100vh;
+    color: #ffffff;
+    /* height: 100vh; */
     width: 70%;
     border: 2px solid black;
     margin: auto;
 }
-#home h2 {
-    /* margin-top: -10%; */
+/* #home h2 {
+    margin-top: 9%;
     font-weight: 500;
-
-}
+} */
 
 #homeimg {
    width: 90%;
@@ -244,14 +243,24 @@ a{
    /* margin-right: 70%; */
    border: 1px solid black;
    border-radius: 52%;
-   background-image: linear-gradient(to right, #1295dc , #4fd6e8);
+   /* background-image: linear-gradient(to right, #1295dc , #4fd6e8); */
+    background-color: goldenrod;
    margin: auto;
    margin-top: 7px;
 }
 .biodown {
     display: flex;
     width: 100%;
-    /* border: 2px solid red; */
+    height: 430px;
+    background-color: #000000;
+    color: #ffffff;
+    border: 7px solid rgb(255, 255, 255);
+    border-radius: 20px;
+    /* border-bottom: none; */
+    /* border-top: none; */
+    padding: 10px;
+    margin-top: -80px;
+    margin-left: 90px;
 }
 .biodownchild1{
     width: 30%;
@@ -265,7 +274,6 @@ a{
     width: 70%;
     margin: auto;
     /* border: 2px solid black; */
-    height: 240px;
     text-align: center;
     padding: 30px;
 }
@@ -274,16 +282,16 @@ a{
 .biodownchild2 h1 {
     margin-top: 30px;
     position: absolute;
-    top: 53%;
+    top: 29%;
     left: 60%;
     transform: translate(-50%, -50%) rotateX(-90deg);
     transform-origin: center bottom;
     font-size: 2rem;
-    color: #000000;
+    color: goldenrod;
     text-transform: uppercase;
     letter-spacing: 10px;
-    animation: welcome-anim 2s ease-in-out infinite;
-    font-weight: 500;
+    animation: welcome-anim 5s ease-in-out infinite;
+    font-weight: 700;
 }
 
 
@@ -310,24 +318,81 @@ a{
     font-weight: 400;
     text-align: justify;
     margin-top: 30px;
-
+    text-transform: capitalize;
 }
 #imgoutside {
     width: 100%;
-   
+    margin-left: 30px;
+    border-radius: 20px;
 }
 .andar1 {
     width: 20%;
+    margin-left: -250px;
     /* margin: auto; */
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
+}
+
+.mybiohead {
+    font-size: 40px;
+    /* text-align: center; */
+    font-weight: 100;
+    margin-top: -80px;
+    margin-bottom: 20px;
+    margin-left: 250px;
+    text-transform: capitalize;
 }
 .andar2 {
-    width: 30%;
+    width: 80%;
     border: 2px solid black;
+   margin-left: 250px;
 }
+
 .mainuper {
     display: flex;
-    width: 110%;
+    width: 100%;
+    height: 100px;
+    /* margin: auto; */
+    /* border: 2px solid rgb(243, 243, 243); */
+    margin-top: 28%;
+    background-color: #000000;
+}
+.hire_me {
+    background-color: goldenrod;
+    /* background-image: linear-gradient(to right, #1295dc , #4fd6e8); */
+    padding: 15px;
+    text-transform: capitalize;
+    font-size: 20px;
+    font-weight: 500;
+    color: #000000;
+    border-radius: 20px;
+    border: none;
+    display: block;
     margin: auto;
-    border: 3px solid grey;
+    margin-top: 30px;
+}
+a {
+    text-decoration: none;
+}
+.hire_me:hover {
+    /* background-color: #000000; */
+    background-image: linear-gradient(to right, #050505 , #000000);
+    color: #ffffff;
+    border: 2px solid white;
+    cursor: pointer;
+}
+
+#append_onebyone {
+    font-size: 30px;
+    font-weight: 200;
+    color: goldenrod;
+}
+
+.mynametop {
+    font-weight: 500;
+    /* text-transform: capitalize; */
+    font-size: 30px;
+    display: inline;
+}
+#shyam {
+    margin-left: 10px;
 }
