--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
   background: #555;
 }
 
+
 /* all similar content styling codes */
 section {
   padding: 100px 0;
@@ -1129,3 +1130,8 @@ footer span a:hover {
   }
 
 } */
+
+
+#shubhamraut {
+  display: none;
+}
